@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-30T02:10:06Z",
+  "timestamp" : "2022-09-30T08:30:11Z",
   "count_outdated" : 550,
   "uniques_outdated" : 317,
-  "count" : 580,
-  "uniques" : 333,
+  "count" : 581,
+  "uniques" : 334,
   "clones" : [
     {
       "timestamp": "2022-09-16T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-09-29T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
