@@ -1,5 +1,5 @@
 {
-  "count": 30,
+  "count": 31,
   "uniques": 3,
   "clones": [
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-09-29T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-30T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
