@@ -1,3 +1,11 @@
+2022-09-30T08:30:11Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3157366947
+* notice: last 14d: unq all: 3 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 317 550 / 333 580
+* notice: next accum: outdated-unq outdated-all / unq all: 317 550 / 334 581
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-30]
+
 2022-09-30T02:10:06Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3155839537
 * notice: last 14d: unq all: 3 30
